<resources>
    <string name="app_name">Portable UTM Pilot</string>
    <string name="conf_msg_operation_added">The operation has been successfully added</string>
    <string name="exc_msg_another_operation">"The operation has not been accepted because there is already another operation accepted in that place, in the requested period"</string>
    <string name="exc_msg_auth_to_see_operations">There was an error trying to login on the UTM. Please, go to settings and test the connection</string>
    <string name="exc_msg_dji_sdk_sign_up_failed">
        The application couldn\'t be registered by DJI SDK, and therefore cannot connect to the drone
        1) Close de application\n
        2) Verify your internet connection\n
        3) Open the application again
    </string>
    <string name="exc_msg_drone_not_selected">You have not selected the drone you are going to use during the operation</string>
    <string name="exc_msg_error_getting_endpoints">There was an error trying to get the endpoints</string>
    <string name="exc_msg_getting_operations_error">Error getting operations</string>
    <string name="exc_msg_invalid_operation_contact_phone">The contact phone can not contain the following combination of characters</string>
    <string name="exc_msg_invalid_operation_contact_phone__2">The contact phone can not be empty. This field is required</string>
    <string name="exc_msg_invalid_operation_contact_phone__3">The contact phone must be all numbers</string>
    <string name="exc_msg_invalid_operation_datetime">Datetime format is not valid (dd/MM/yyyy HH:mm)</string>
    <string name="exc_msg_invalid_operation_description">The name can not contain the following combination of characters</string>
    <string name="exc_msg_invalid_operation_description__2">The name must be between 1 and 50 characters</string>
    <string name="exc_msg_invalid_operation_drone">The dron can not contain the following combination of characters</string>
    <string name="exc_msg_invalid_operation_drone__2">The drone must be between 1 and 40 characters</string>
    <string name="exc_msg_invalid_operation_pilot">The pilot can not contain the following combination of characters</string>
    <string name="exc_msg_invalid_operation_pilot__2">The pilot name must be between 1 and 20 characters</string>
    <string name="exc_msg_invalid_period">The end of the operation must be after the start</string>
    <string name="exc_msg_invalid_latitude">The latitude must be a value between -90 and 90</string>
    <string name="exc_msg_invalid_longitude">The longitude must be a value between -180 and 180</string>
    <string name="exc_msg_no_polygon_drawn">You didn\'t draw the polygon you want to save</string>
    <string name="exc_msg_not_enough_points">The polygon must have at least 3 vertices</string>
    <string name="exc_msg_operation_not_activated">Operation must be Activated, before the flight begins</string>
    <string name="exc_msg_paragliding_pilot_must_enable_utm">You need to enable the UTM to use this functionality. To do this, please, go to settings.</string>
    <string name="exc_msg_permission_not_granted">This functionality requires permission to be granted in order to work properly</string>
    <string name="exc_msg_user_has_no_drones">There is no drone registered, asociated to your user account</string>
    <string name="exc_msg_no_more_drones">There are no more drones to load</string>
    <string name="exc_msg_utm_connection_failed">It was not possible to connect to the UTM. Please, go to Settings and test the connection.</string>
    <string name="exc_msg_uvr">"The operation has not been accepted because there is an UVR in that place"</string>
    <string name="miscellaneous_def_polygon_instructions">1) Click on the map to define the polygon vertices.\n\n2) You can delete any polygon vertice clicking on it.\n\n3) You can move the vertices, if you press and hold on any of them.</string>
    <string name="miscellaneous_def_polygon_options">
        Draw the area where you will fly on the map or introduce the coordinates
    </string>
    <string name="miscellaneous_info_dji_drone">Report live to the UTM using this app to fly the drone</string>
    <string name="miscellaneous_info_pilot">Report live to the UTM the device position as information of the pilot position</string>
    <string name="miscellaneous_info_tracker">Report live to the UTM using a Dronfies EASYID device</string>
    <string name="miscellaneous_instant_request_explanation">"Instant Request" will request authorization to fly around your position, within a radius of %f km and for %d h. Both the radius and the duration can be configured in the settings section.</string>
    <string name="miscellaneous_load_dat_file_message">This functionality allows you to load the .DAT file associated with the operation in question, in order to extract from it the telemetry registered by the drone, and upload it to the UTM.</string>
    <string name="miscellaneous_select_utm_to_register">Select the UTM in which you want to register</string>
    <string name="miscellaneous_wait_until_op_created">Wait while the operation is created. This process usually takes about 30 seconds.</string>
    <string name="question_account">Don\'t you have an account?</string>
    <string name="question_delete_operation">Are you sure you want to delete the operation \'%s\'?</string>
    <string name="question_delete_point">Are you sure you want to delete this point of the polygon?</string>
    <string name="question_quit_without_save_polygon">Are you sure you want to quit without saving?</string>
    <string name="question_report_position_free_flight">Do you want to report position to the UTM during the free flight?</string>
    <string name="question_return_to_home">Do you want to return to home?</string>
    <string name="str_about">About</string>
    <string name="str_add">Add</string>
    <string name="str_add_operation">Add Operation</string>
    <string name="str_add_vertex">Add vertex</string>
    <string name="str_altitude">Altitude</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_change">Change</string>
    <string name="str_change_language">Change language</string>
    <string name="str_change_password">Change Password</string>
    <string name="str_change_username">Change Username</string>
    <string name="str_change_user_type">Change User Type</string>
    <string name="str_change_utm_endpoint">Change UTM endpoint</string>
    <string name="str_choose_transmission_system">Choose transmission system</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_contact_phone">Contact phone</string>
    <string name="str_coordinates">Coordinates</string>
    <string name="str_creating_operation">Creating Operation</string>
    <string name="str_current_position">Current Position</string>
    <string name="str_define_manually">Define Manually</string>
    <string name="str_define_polygon">Define polygon</string>
    <string name="str_delete">Delete</string>
    <string name="str_delete_operation">Delete operation</string>
    <string name="str_delete_point">Delete point</string>
    <string name="srt_dismiss">Dismiss</string>
    <string name="str_dont_quit">Don\'t quit</string>
    <string name="str_drone">Drone</string>
    <string name="str_drone_not_connected">Drone not connected</string>
    <string name="str_drone_operator">Drone Operator</string>
    <string name="str_duration">Duration</string>
    <string name="str_enable">Enable</string>
    <string name="str_end">End</string>
    <string name="str_english">English</string>
    <string name="str_error">Error</string>
    <string name="str_error_reporting_position">Error Reportando Posición</string>
    <string name="str_establish">Establish</string>
    <string name="str_free_flight">Free flight</string>
    <string name="str_go_fly">Go Fly</string>
    <string name="str_google_maps">Google Maps</string>
    <string name="str_hour">Hour</string>
    <string name="str_hours">Hours</string>
    <string name="str_i_am_a_drone_operator">I am a drone operator</string>
    <string name="str_i_am_a_paragliding_pilot">I am a paragliding pilot</string>
    <string name="str_instructions">Instructions</string>
    <string name="str_invalid_data">Invalid Data</string>
    <string name="str_invalid_latitude">Invalid Latitude</string>
    <string name="str_invalid_longitude">Invalid Longitude</string>
    <string name="str_it_is_understood">It is understood</string>
    <string name="str_language">Language</string>
    <string name="str_latitude">Latitude</string>
    <string name="str_load_dat_file">Load .DAT File</string>
    <string name="str_load_file">Load File</string>
    <string name="str_load_more">Load More</string>
    <string name="str_longitude">Longitude</string>
    <string name="str_map">Map</string>
    <string name="str_maximum_altitude">Maximum Altitude</string>
    <string name="str_meters">Meters</string>
    <string name="str_model">Model</string>
    <string name="str_name">Name</string>
    <string name="str_no">No</string>
    <string name="str_no_drones">No Drones</string>
    <string name="str_operation_added">Operation Added</string>
    <string name="str_operation_id">Operation ID</string>
    <string name="str_operation_is_not_activated">Operation is not Activated</string>
    <string name="str_operations">Operations</string>
    <string name="str_paragliding_pilot">Paragliding Pilot</string>
    <string name="str_password">Password</string>
    <string name="str_pilot">Pilot</string>
    <string name="str_plate">Plate</string>
    <string name="str_polygon">Polygon</string>
    <string name="str_quit">Quit</string>
    <string name="str_report_pilot_position">Report Pilot Position</string>
    <string name="str_report_position">Report position</string>
    <string name="str_reporting_position">Reporting Position</string>
    <string name="str_return">Return</string>
    <string name="str_save">Save</string>
    <string name="str_select_drone">Select Drone</string>
    <string name="str_serial">Serial</string>
    <string name="str_settings">Settings</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_sign_up_failed">Sing up failed</string>
    <string name="str_since">Since</string>
    <string name="str_skip_login">Skip Login</string>
    <string name="str_spanish">Spanish</string>
    <string name="str_start">Start</string>
    <string name="str_start_reporting">Start Reporting</string>
    <string name="str_state">State</string>
    <string name="str_stop_reporting">Stop Reporting</string>
    <string name="str_test_connection">Test Connection</string>
    <string name="str_to">To</string>
    <string name="str_user_type">User Type</string>
    <string name="str_username">Username</string>
    <string name="str_utm_connection_failed">UTM Connection Failed</string>
    <string name="str_utm_endpoint">UTM Endpoint</string>
    <string name="str_utm_is_disabled">UTM is disabled</string>
    <string name="str_version">Version</string>
    <string name="str_yes">Yes</string>
    <string name="str_login_failed">Login Failed</string>
    <string name="str_connection_error">Connection Error</string>
    <string name="str_select">Select</string>
    <string name="str_dat_file_uploaded">Dat File Uploaded!</string>
    <string name="str_radius_km">Radius (Km)</string>
    <string name="str_duration_hours">Duration (Hours)</string>
    <string name="str_vehicle">Vehicle</string>
    <string name="express_vehicle_not_selected_title">Vehicle not selected</string>
    <string name="express_vehicle_not_selected">Please go to setting and select a vehicle under "Instant Request" input</string>
    <string name="str_link">Link</string>
    <string name="str_wifi_settings">WiFi Settings</string>
    <string name="str_sim_setup">SIM Setup</string>
</resources>