<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.TrackerSettingsActivity"
    android:id="@+id/relative_root">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_link_settings"
            style="@style/RaisedButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/str_link" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_wifi_settings"
            style="@style/RaisedButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/str_wifi_settings" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sim_settings"
            style="@style/RaisedButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/str_sim_setup" />

    </LinearLayout>

</RelativeLayout>