<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.DefinePolygonManuallyActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <!-- Root Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar">

        <!-- Title and Add Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0"
            android:padding="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/str_polygon"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_add"
                android:onClick="onClickAgregarCoordenadas"
                style="@style/RaisedButton"/>
        </LinearLayout>

        <!-- Coordiantes -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/linear_layout_coordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>
        </ScrollView>

        <!-- Save Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonGuardar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="0"
                android:text="@string/str_save"
                android:onClick="onClickGuardarPoligono"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                style="@style/RaisedButton"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>